# typesafe_builder

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
src/: lib.rs
tests/: builder.rs
typesafe_builder_derive/: Cargo.toml  README.md
typesafe_builder_derive/src/: builder_field.rs  derive_builder.rs  input.rs  lib.rs
typesafe_builder_derive/src/derive_builder/: eval_condition.rs  generate_build_methods.rs  generate_setter_methods.rs  validate_condition.rs
typesafe_builder_derive/tests/: derive_builder.rs
typesafe_builder_derive/tests/ui/: 1.rs  1.stderr  10.rs  10.stderr  11.rs  11.stderr  12.rs  12.stderr  13.rs  13.stderr  2.rs  2.stderr  3.rs  3.stderr  4.rs  4.stderr  5.rs  5.stderr  6.rs  6.stderr  7.rs  7.stderr  8.rs  8.stderr  9.rs  9.stderr
