[package]
name = "typesafe_builder_derive"
version = "1.1.0"
edition = "2024"
authors = ["tomoikey"]
readme = "README.md"
repository = "https://github.com/tomoikey/typesafe_builder"
categories = ["accessibility", "development-tools", "rust-patterns"]
license = "MIT"
description = "A procedural macro to generate type-safe builder patterns for Rust structs"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["derive", "parsing", "proc-macro"] }
quote = "1"
darling = "0.20"
proc-macro2 = "1"

[dev-dependencies]
trybuild = "1.0.105"
