[package]
name = "typesafe_builder_derive"
version = "1.6.0"
edition = "2024"
authors = ["tomoikey"]
readme = "README.md"
repository = "https://github.com/tomoikey/typesafe_builder"
categories = ["accessibility", "development-tools", "rust-patterns"]
license = "MIT"
description = "A procedural macro to generate type-safe builder patterns for Rust structs"

[lib]
proc-macro = true

[dependencies]
darling = "0.21.1"
proc-macro2 = "1.0.95"
syn = { version = "2.0.104", features = ["derive", "parsing", "proc-macro"] }
quote = "1.0.40"

[dev-dependencies]
trybuild = "1.0.110"
